src/test/ui/non-copyable-void.stderr
error[E0599]: no method named `clone` found for enum `libc::c_void` in the current scope
  --> $DIR/non-copyable-void.rs:11:23
   |
LL |         let _z = (*y).clone();
   |                       ^^^^^ method not found in `libc::c_void`
   | 
  ::: $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL |     fn clone(&self) -> Self;
   |        -----
   |        |
   |        the method is available for `std::sync::Arc<libc::c_void>` here
   |        the method is available for `std::rc::Rc<libc::c_void>` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
